--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,55 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;600;700&display=swap");
+
+:root {
+  font-size: 16px;
+  --bg-primary: #ffffff;
+  --bg-secondary: #f5f5f5;
+  --text-primary: #000000;
+  --text-secondary: #202124;
+  --text-tertiary: #4c4c4c;
+  --btn-primary: #0005df;
+  --btn-secondary: #ffffff;
+  --hover-state: #e9eaff;
+  --focused-state: #c2c3f7;
+  --transition-speed: 250ms;
+  --sidebar-width: 5rem;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+* {
+  font-family: "Roboto", sans-serif;
+  box-sizing: border-box;
+}
+
+img {
+  display: block;
+}
+body {
+  margin: 0;
+  padding: 0;
+  background: var(--bg-primary);
+}
+
+body::-webkit-scrollbar {
+  width: 0.25rem;
+}
+
+body::-webkit-scrollbar-track {
+  background: var(--bg-secondary);
+}
+
+body::-webkit-scrollbar-thumb {
+  background: var(--btn-primary);
+}
+
+main {
+  margin-left: 5rem;
+  overflow-x: hidden;
+  padding-bottom: 5rem;
+}
+
+/* Mobile Screens */
+@media only screen and (max-width: 600px) {
+  main {
+    margin-left: 0;
+  }
 }
